secondfile/objects/RDS_Rate_Plans__c.object
<CustomObject>
    <description>RDS-DealHash-RDS-Contract Details-RDS-Rate Plans</description>
    <fields>
        <fullName>RDS_Contract_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Rate Plans-RDS-Contract Details</description>
        <label>RDS-Contract Details</label>
        <referenceTo>RDS_Contract_Details__c</referenceTo>
        <relationshipLabel>RDS-Rate Plans</relationshipLabel>
        <relationshipName>RDS_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Rate Plans-Rate Plan ID</description>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Start_Date__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Rate Plans-Rate Plan Start Date</description>
        <label>Rate Plan Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Date__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Rate Plans-Rate Stability Date</description>
        <label>Rate Stability Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-Rate Plans</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>RDS-Rate Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Rate Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>